; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/libvita2d/source/extr_vita2d_texture.c_vita2d_draw_texture_tint.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/libvita2d/source/extr_vita2d_texture.c_vita2d_draw_texture_tint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vita2d_draw_texture_tint(i32* %0, float %1, float %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca float, align 4
  %7 = alloca float, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store float %1, float* %6, align 4
  store float %2, float* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = call i32 (...) @set_texture_tint_program()
  %10 = call i32 (...) @set_texture_wvp_uniform()
  %11 = load i32, i32* %8, align 4
  %12 = call i32 @set_texture_tint_color_uniform(i32 %11)
  %13 = load i32*, i32** %5, align 8
  %14 = load float, float* %6, align 4
  %15 = load float, float* %7, align 4
  %16 = call i32 @draw_texture_generic(i32* %13, float %14, float %15)
  ret void
}

declare dso_local i32 @set_texture_tint_program(...) #1

declare dso_local i32 @set_texture_wvp_uniform(...) #1

declare dso_local i32 @set_texture_tint_color_uniform(i32) #1

declare dso_local i32 @draw_texture_generic(i32*, float, float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
